src/main/g8/kubernetes/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: reactive-mongo
  namespace: test
spec:
  selector:
    matchLabels:
      app: reactive-mongo
      env: test
      tier: rest-service
      type: api
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: reactive-mongo
        env: test
        tier: rest-service
        type: api
    spec:
      containers:
      - name: reactive-mongo
        image: dockerhub.com/elucidator/play-reactive-mongo-db:1.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
          - containerPort: 9000
      imagePullSecrets:
      - name: docker-image-puller
