src/main/g8/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reactive-mongo-ingress
  namespace: test
  annotations: {
       "certmanager.k8s.io/cluster-issuer": "letsencrypt-prod",
       "kubernetes.io/ingress.class": "nginx",
       "nginx.ingress.kubernetes.io/rewrite-target": /,
       "kubernetes.io/tls-acme": "true",
     }
spec:
  rules:
  - host: api.test.codemastery.nl
    http:
      paths:
      - backend:
          serviceName: reactive-mongo-service
          servicePort: 9000
        path: /
  tls:
   - hosts:
     - api.test.codemastery.nl
     secretName: api-test-tls-cert
